# MaiBot-WeChat-Adapter

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  logger.py  mmc_com_layer.py  weixin_client.py
src/config/: __init__.py  config.py  config_base.py  config_manager.py
src/recv_handler/: __init__.py  message_handler.py
src/send_handler/: __init__.py  main_send_handler.py
template/: template_config.toml
