[project]
name = "maibot-wechat-adapter"
version = "1.0.0"
description = "MaiBot 微信个人号适配器，基于微信 iLink Bot API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
authors = [
    {name = "MaiBot Team"}
]
keywords = ["maibot", "wechat", "adapter", "bot"]

dependencies = [
    "maim_message>=0.6.2",
    "loguru>=0.7.0",
    "aiohttp>=3.9.0",
    "pycryptodome>=3.20.0",
    "qrcode>=7.4",
    "tomli-w>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
maibot-wechat = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
